 * limitations under the License.
 */

Pig Change Log

Trunk (unreleased changes)

INCOMPATIBLE CHANGES

PIG-3419: Pluggable Execution Engine (achalsoni81 via cheolsoo)

PIG-3191: [piggybank] MultiStorage output filenames are not sortable (Danny Antonelli via jcoveney)

PIG-3174: Remove rpm and deb artifacts from build.xml (gates)

IMPROVEMENTS

PIG-3367: Add assert keyword (operator) in pig (aniket486)

PIG-3235: Avoid extra byte array copies in streaming (rohini)

PIG-3065: pig output format/committer should support recovery for hadoop 0.23 (daijy)

PIG-3390: Make pig working with HBase 0.95 (jarcec via daijy)

PIG-3431: Return more information for parsing related exceptions. (jeremykarn via daijy)

PIG-3430: Add xml format for explaining MapReduce Plan. (jeremykarn via daijy)

PIG-3048: Add mapreduce workflow information to job configuration (billie.rinaldi via daijy)

PIG-3436: Make pigmix run with Hadoop2 (rohini)

PIG-3424: Package import list should consider class name as is first even if -Dudf.import.list is passed (rohini)

PIG-3204: Change script parsing to parse entire script instead of line by line (rohini)

PIG-3359: Register Statements and Param Substitution in Macros (jpacker via cheolsoo)

PIG-3182: Pig currently lacks functions to trim the whitespace only on one hand side (sarutak via cheolsoo)

PIG-3163: Pig current releases lack a UDF endsWith. This UDF tests if a given string ends with the specified suffix (sriramkrishnan via cheolsoo)

PIG-3015: Rewrite of AvroStorage (jadler via cheolsoo)

PIG-3361: Improve Hadoop version detection logic for Pig unit test (daijy)

PIG-3280: Document IN operator and CASE expression (cheolsoo)

PIG-3342: Allow conditions in case statement (cheolsoo)

PIG-3327: Pig hits OOM when fetching task reports (rohini)

PIG-3336: Change IN operator to use or-expressions instead of EvalFunc (cheolsoo)

PIG-3339: Move pattern compilation in ToDate as a static variable (rohini)
